--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "author": "Voinov A.V.",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.0.2",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0"
   }
 }
