--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "Voinov A.V.",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^2.5.7",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
+    "webpack-nomodule-plugin": "^1.2.1"
   }
 }
